--- a/templates/index/indexcentralayuda.html
+++ b/templates/index/indexcentralayuda.html
@@ -11,7 +11,7 @@
   <a href="/templates/index/indexprincipal.html"  class="margen" >CET4</a>
     <nav class="nav">
       <span>Español</span>
-      <a href="/templates/index/indexiniciarsesion.html">Iniciar Sesión</a>
+      <a href="/iniciarsesion">Iniciar Sesión</a>
     </nav>
   </header>
 
@@ -31,7 +31,7 @@
     <section class="grid">
       <article class="card">
         <img src="/static/utils/img/anuncio.png" alt="Ícono de Anuncios">
-        <a href="/templates/index/indexanuncios.html">Anuncios</a>
+        <a href="/indexanuncios.html">Anuncios</a>
         <p>Esté al tanto de nuevas noticias</p>
       </article>
 
