--- a/templates/index/indexanuncios.html
+++ b/templates/index/indexanuncios.html
@@ -4,46 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anuncios</title>
-    <link rel="Stylesheet" href="/static/css/estiloanuncios.css">
+    <link rel="Stylesheet" href="estiloanuncios.css">
 </head>
 <body>
      <header class="header">
-  <a href="/templates/index/indexprincipal.html" class="margen" >CET4</a>
+  <a href="/CET4/templates/index/indexprincipal.html"  class="margen" >CET4</a>
     <nav class="nav">
       <span>Español</span>
-      <a href="#">Iniciar Sesión</a>
+      <a href="/iniciarsesion">Iniciar Sesión</a>
     </nav>
 
   </header>
    <h1 class="text"> CENTRO DE ANUNCIOS  </h1> 
-    <h2 class="text2"> Bienvenido al apartado de Anuncios. Ponete al día con nuestras últimas novedades y actualizaciones importantes.</h2>
+    <h2 class="text2"> Bienvenido al apartado de Anuncios. "Mantente al día con nuestras últimas novedades y actualizaciones importantes."</h2>
 
     <h2 style="color: rgb(44, 44, 83);"> [NUEVA FUNCIÓN] </h2>
     <p style="color: rgb(58, 19, 19);">
-        ¡Ahora podes editar tu foto de perifl!
-Fecha: 16 de agosto de 2025
-Visita nuestra nueva opcion para poder añadir una imagen desde tu computadora/celular y agregarlo como una foto de perfil.
+        ¡Explora nuestra Galería de Imágenes Mejorada!
+Publicado el: 10 de junio de 2025
+Hemos lanzado una actualización significativa para el apartado de comentarios, que ahora ofrece mayor velocidad de carga, opciones de visualización personalizables y herramientas de edición básicas. ¡Descubre cómo sacarle el máximo partido en nuestra guía completa!
     </p>
 
     <h2 style="color: rgb(44, 44, 83);">[MANTENIMIENTO PROGRAMADO] </h2>
     <p style="color: rgb(58, 19, 19);">
 Actualización de Servidores
-Fecha: 15 de agosto de 2025
-Informamos que realizaremos un mantenimiento programado en nuestros servidores el 15 de agosto, entre las 02:00 AM y 04:00 AM ART. Durante este periodo, es posible que experimentes interrupciones breves en el servicio. Agradecemos tu comprensión.
+Publicado el: 5 de junio de 2025
+Informamos que realizaremos un mantenimiento programado en nuestros servidores el 15 de junio de 2025, entre las 02:00 AM y 04:00 AM ART. Durante este periodo, es posible que experimentes interrupciones breves en el servicio. Agradecemos tu comprensión.
     </p>
  
         
     <h2 style="color: rgb(44, 44, 83);">[MEJORA]   </h2>
     <p style="color: rgb(58, 19, 19);">
 optimización de Rendimiento en la Búsqueda
-Fecha: 16 de agosto de 2025
-Implementamos mejoras en nuestro motor de búsqueda, ¡Ahora encontrar lo que buscás es más fácil!
+Publicado el: 28 de mayo de 2025
+Hemos implementado mejoras en nuestro motor de búsqueda, lo que resultará en resultados más rápidos y precisos. ¡Ahora encontrar lo que buscas es aún más fácil!
     
    <h2 style="color: rgb(44, 44, 83);">[AVISO IMPORTANTE] </h2> 
    <p style="color: rgb(58, 19, 19);">
 Actualización de la Política de Privacidad
-Fecha: 16 de agosto de 2025
-Te informamos sobre una actualización en nuestra Política de Privacidad, para aclarar algunos puntos sobre la gestión de tus datos. Te invitamos a revisarla.
+Publicado el: 20 de mayo de 2025
+Te informamos sobre una actualización en nuestra Política de Privacidad, efectiva a partir del 1 de julio de 2025. Hemos aclarado puntos clave sobre la gestión de tus datos. Te invitamos a revisarla.
 
 
    </p> 
