--- a/static/css/usuario.css
+++ b/static/css/usuario.css
@@ -119,16 +119,20 @@ body {
 .perfil-comentario-item{
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: left;
     background-color: #0d2a52;
     border: 1px solid #345678;
     border-radius: 10px;
     padding: 10px;
     width: 100%;
+    margin-top: 1em;
 }
 .perfil-comentario-header{
     background-color:#131e2e;
     border: 1px solid #456;
     padding: 10px;
+
     width: 25%;
     border-radius: 10px;
     margin-bottom: 10px;
