--- a/templates/index/indexusuario.html
+++ b/templates/index/indexusuario.html
@@ -36,12 +36,14 @@
     <div class="action-buttons">
       <button id="openModalBtn">Editar perfil</button>
     </div>
+    <div class="container-caja-comentario">
     <div class="caja-comentarios">
         <h3>Mis Comentarios Recientes</h3>
         <div id="mis-comentarios" class="comments-list">
           <!-- Aquí se cargarán los comentarios del usuario -->
           <p>Cargando tus comentarios...</p>
         </div>
+    </div>
     </div>
   </div>
 
