saque barra de busqueda

--- a/templates/index/dinformaticaindex.html
+++ b/templates/index/dinformaticaindex.html
@@ -27,13 +27,13 @@
     </div>
     </div>
     <!--Fin de la barra lateral-->
-     <div class="header">
+     <!-- <div class="header">
         <form class="buscador-logo" autocomplete="off">
             <div class="buscador-logo2">
             <img src="/static/utils/img/busqueda-de-lupa.png" alt="ErrorLogo" class="logo">
             <input class="buscador" placeholder=" Preguntas..." type="text"> 
             </div>
-        </form>
+        </form> -->
     </div>
 <main class="cuerpo1">
     <section class="bloque-superpuesto">
