--- a/templates/index/dprogramacionindex.html
+++ b/templates/index/dprogramacionindex.html
@@ -26,13 +26,13 @@
         <a class="separador3" href="/configuracion"><img src="/static/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
     </div>
     <!--Fin de la barra lateral-->
-     <div class="header">
+     <!-- <div class="header">
         <form class="buscador-logo" autocomplete="off">
             <div class="buscador-logo2">
             <img src="/static/utils/img/busqueda-de-lupa.png" alt="ErrorLogo" class="logo">
             <input class="buscador" placeholder=" Preguntas..." type="text"> 
             </div>
-        </form>
+        </form> -->
     </div>
     <div class="cuerpo1">
              <br>
