--- a/templates/index/indexhomeoinicio.html
+++ b/templates/index/indexhomeoinicio.html
@@ -15,12 +15,12 @@
             <div id="toggle">
         <span>&#9776;</span> <!--El simbolo de Tres barras-->
     </div>
-        <form class="buscador-logo">
+        <!-- <form class="buscador-logo">
             <div class="buscador-logo2">
             <img src="/static/utils/img/busqueda-de-lupa.png" alt="ErrorLogo" class="logo">
             <input class="buscador" placeholder=" Preguntas..." type="text"> 
             </div>
-        </form>
+        </form> -->
     </div>
     <!--Todo la barra lateral-->
     <div class="elcostado ordenado">
