--- a/templates/index/indexin6to.html
+++ b/templates/index/indexin6to.html
@@ -27,12 +27,12 @@
     </div>
     <!--Fin de la barra lateral-->
      <div class="header">
-        <form class="buscador-logo">
+        <!-- <form class="buscador-logo">
             <div class="buscador-logo2">
             <img src="/utils/img/busqueda-de-lupa.png" alt="ErrorLogo" class="logo">
             <input class="buscador" placeholder=" Preguntas..." type="text"> 
             </div>
-        </form>
+        </form> -->
     </div>
     <div class="cuerpo1">
              <br>
