--- a/templates/index/indexin7mo.html
+++ b/templates/index/indexin7mo.html
@@ -27,12 +27,12 @@
         <a class="separador3" href="/configuracion"><img src="/static/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
     </div>
      <div class="header">
-        <form class="buscador-logo">
+        <!-- <form class="buscador-logo">
             <div class="buscador-logo2">
             <img src="/CET4/utils/img/busqueda-de-lupa.png" alt="ErrorLogo" class="logo">
             <input class="buscador" placeholder=" Preguntas..." type="text"> 
             </div>
-        </form>
+        </form> -->
     </div>
     <div class="cuerpo1">
              <br>
