--- a/templates/index/baneado.html
+++ b/templates/index/baneado.html
@@ -10,10 +10,8 @@
 </head>
 <body>
     <div id="container">
-        <p>Estas baneado 🚫</p>
-        <br>
-        <br>
-        <a href='/entrar_como_invitado'>Entrar como invitado</a>
+        <p class="texto-baneado">Estas baneado<span class="simbolo-baneado">🚫</span> </p> 
+        <a class="entrar-invitado" href='/entrar_como_invitado'>Entrar como invitado</a>
     </div>
 </body>
 </html>
