--- a/static/css/ban.css
+++ b/static/css/ban.css
@@ -1,3 +1,51 @@
 body{
-    background-color: rgb(58, 2, 84);
+    background: linear-gradient(to top, #020c25 0%, #082c54 50%);
+    width: 100%;
+    min-height: 100vh;
+     overflow: hidden;
+}
+
+#container{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.texto-baneado{
+    color: white;
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+p.texto-baneado{
+    font-size: 3.5rem;
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+
+}
+.simbolo-baneado{
+    font-size: 6rem;
+    margin-left: 10px;
+    margin-top: 5px;
+}
+
+.entrar-invitado{
+    color: white;
+    text-decoration: none;
+    font-size: 40px;
+    background-color: #082c54;
+    padding: 10px 20px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+}
+
+.entrar-invitado:hover{
+    background-color: #0a3c6c;
 }
