--- a/templates/index/miembros.html
+++ b/templates/index/miembros.html
@@ -5,8 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuestro Equipo</title>
     <link rel="stylesheet" href="/static/css/miembros.css">
+    <link rel="stylesheet" href="/static/css/barralateral.css">
 </head>
 <body>
+    <div id="toggle">
+        <span>&#9776;</span> <!--El simbolo de Tres barras-->
+    </div>
+      <!--Todo la barra lateral-->
+    <div class="elcostado ordenado">
+        <div id="out">
+            <span>&#9587;</span> <!--El simbolo de la X-->
+        </div>
+        <a class="separador3" href="/templates/index/indexusuario.html"><img src="/static/utils/img/usuario.png" alt="Perfil" class="usuario"></a>
+        <a class="separador3" href="/indexhomeoinicio"><img src="/static/utils/img/casa-img1.png" alt="Inicio" class="casa1"></a>
+        <a class="separador3" href="/panelnotificaciones"><img src="/static/utils/img/campana-img2.png" alt="Notificaciones" class="campana2"></a>
+        <a class="separador3" href="/templates/index/indexcentralayuda.html"><img src="/static/utils/img/pregunta-img3.png" alt="Soporte" class="soporte3"></a>
+        <a class="separador3" href="#"><img src="/static/utils/img/grupo-img4.png" alt="" class="grupo4"></a>
+        <a class="separador3" href="/configuracion"><img src="/static/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
+        <a class="separador3" href="/logout"><img src="/static/utils/img/cerrar-sesion.png" alt="cerrar-sesion" class="cerrar-sesion6"></a>
+    </div>
 
     <header>
         <h1>Nuestro Equipo</h1>
@@ -63,7 +80,7 @@
         </div>
 
         <div class="team-member">
-            <img src="/static/utils/img/giafot.jpg"Foto de Miembro 9">
+            <img src="/static/utils/img/giafot.jpg" alt="Foto de Miembro 9">
             <h3 class="member-name">Gianella Sosa</h3>
             <p class="member-role">Documentacion</p>
         </div>
@@ -85,3 +102,6 @@
             <p class="member-role">Content Creator</p>
         </div>
     </main>
+<script src="/static/js/barralateral.js"></script>
+</body>
+</html>
