--- a/templates/index/miembros.html
+++ b/templates/index/miembros.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="/static/css/miembros.css">
 </head>
 <body>
-
     <header>
         <h1>Nuestro Equipo</h1>
         <p>Conoce a las personas que hacen todo posible.</p>
@@ -15,73 +14,125 @@
 
     <main class="team-grid">
         <div class="team-member">
-            <img src="sonino.png" alt="Foto de Miembro 1">
+            <img src="{{ url_for('static', filename='img/sonino.png') }}" alt="Foto de Catalina Guasch">
             <h3 class="member-name">Catalina Guasch</h3>
             <p class="member-role">Back-End Developer</p>
+            <a href="https://www.instagram.com/usuario" class="social-link" target="_blank">
+                <svg viewBox="0 0 24 24"><path d="M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z" /></svg>
+                Instagram
+            </a>
         </div>
 
         <div class="team-member">
-            <img src="sonino.png" alt="Foto de Miembro 2">
+            <img src="{{ url_for('static', filename='img/sonino.png') }}" alt="Foto de Lautaro Gavilan">
             <h3 class="member-name">Lautaro Gavilan</h3>
             <p class="member-role">Back-End Developer</p>
+            <a href="https://www.instagram.com/usuario" class="social-link" target="_blank">
+                <svg viewBox="0 0 24 24"><path d="M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z" /></svg>
+                Instagram
+            </a>
         </div>
 
         <div class="team-member">
-            <img src="sonino.png" alt="Foto de Miembro 3">
+            <img src="{{ url_for('static', filename='img/sonino.png') }}" alt="Foto de Lautaro Samudio">
             <h3 class="member-name">Lautaro Samudio</h3>
             <p class="member-role">Back-end Developer</p>
+            <a href="https://www.instagram.com/usuario" class="social-link" target="_blank">
+                <svg viewBox="0 0 24 24"><path d="M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z" /></svg>
+                Instagram
+            </a>
         </div>
 
         <div class="team-member">
-            <img src="sonino.png" alt="Foto de Miembro 4">
+            <img src="{{ url_for('static', filename='img/sonino.png') }}" alt="Foto de Carmen Figueroa">
             <h3 class="member-name">Carmen Figueroa</h3>
-            <p class="member-role">Front-End  Developer</p>
+            <p class="member-role">Front-End Developer</p>
+            <a href="https://www.instagram.com/usuario" class="social-link" target="_blank">
+                <svg viewBox="0 0 24 24"><path d="M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z" /></svg>
+                Instagram
+            </a>
         </div>
 
         <div class="team-member">
-            <img src="sonino.png" alt="Foto de Miembro 5">
+            <img src="{{ url_for('static', filename='img/sonino.png') }}" alt="Foto de Francisco Rodriguez">
             <h3 class="member-name">Francisco Rodriguez</h3>
-            <p class="member-role">Front-End  Developer</p>
+            <p class="member-role">Front-End Developer</p>
+            <a href="https://www.instagram.com/usuario" class="social-link" target="_blank">
+                <svg viewBox="0 0 24 24"><path d="M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z" /></svg>
+                Instagram
+            </a>
         </div>
 
         <div class="team-member">
-            <img src="sonino.png" alt="Foto de Miembro 6">
+            <img src="{{ url_for('static', filename='img/sonino.png') }}" alt="Foto de Gabriel Ramirez">
             <h3 class="member-name">Gabriel Ramirez</h3>
-            <p class="member-role">Front-End  Developer</p>
+            <p class="member-role">Front-End Developer</p>
+            <a href="https://www.instagram.com/usuario" class="social-link" target="_blank">
+                <svg viewBox="0 0 24 24"><path d="M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z" /></svg>
+                Instagram
+            </a>
         </div>
 
         <div class="team-member">
-            <img src="sonino.png" alt="Foto de Miembro 7">
+            <img src="{{ url_for('static', filename='img/sonino.png') }}" alt="Foto de Julieta Baez">
             <h3 class="member-name">Julieta Baez</h3>
-            <p class="member-role">Front-End  Developer</p>
+            <p class="member-role">Front-End Developer</p>
+            <a href="https://www.instagram.com/usuario" class="social-link" target="_blank">
+                <svg viewBox="0 0 24 24"><path d="M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z" /></svg>
+                Instagram
+            </a>
         </div>
 
         <div class="team-member">
-            <img src="sonino.png" alt="Foto de Miembro 8">
+            <img src="{{ url_for('static', filename='img/sonino.png') }}" alt="Foto de Martina Alvarin">
             <h3 class="member-name">Martina Alvarin</h3>
-            <p class="member-role">Front-End  Developer</p>
+            <p class="member-role">Front-End Developer</p>
+            <a href="https://www.instagram.com/usuario" class="social-link" target="_blank">
+                <svg viewBox="0 0 24 24"><path d="M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z" /></svg>
+                Instagram
+            </a>
         </div>
 
         <div class="team-member">
-            <img src="/static/utils/img/giafot.jpg"Foto de Miembro 9">
+            <img src="{{ url_for('static', filename='utils/img/giafot.jpg') }}" alt="Foto de Gianella Sosa">
             <h3 class="member-name">Gianella Sosa</h3>
             <p class="member-role">Documentacion</p>
+            <a href="https://www.instagram.com/usuario" class="social-link" target="_blank">
+                <svg viewBox="0 0 24 24"><path d="M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z" /></svg>
+                Instagram
+            </a>
         </div>
 
         <div class="team-member">
-            <img src="sonino.png" alt="Foto de Miembro 10">
+            <img src="{{ url_for('static', filename='img/sonino.png') }}" alt="Foto de Luis Molina">
             <h3 class="member-name">Luis Molina</h3>
             <p class="member-role">Documentacion</p>
+            <a href="https://www.instagram.com/usuario" class="social-link" target="_blank">
+                <svg viewBox="0 0 24 24"><path d="M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z" /></svg>
+                Instagram
+            </a>
         </div>
         
         <div class="team-member">
-            <img src="sonino.png" alt="Foto de Miembro 11">
+            <img src="{{ url_for('static', filename='img/sonino.png') }}" alt="Foto de Ciro Saucedo">
             <h3 class="member-name">Ciro Saucedo</h3>
             <p class="member-role">Documentacion</p>
+            <a href="https://www.instagram.com/usuario" class="social-link" target="_blank">
+                <svg viewBox="0 0 24 24"><path d="M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z" /></svg>
+                Instagram
+            </a>
         </div>
-         <div class="team-member">
-            <img src="/static/utils/img/avatar2.jpg" alt="Foto de Miembro 11">
+
+        <div class="team-member">
+            <img src="{{ url_for('static', filename='utils/img/avatar2.jpg') }}" alt="Foto de Zettino">
             <h3 class="member-name">Zettino</h3>
             <p class="member-role">Content Creator</p>
+            <a href="https://www.instagram.com/usuario" class="social-link" target="_blank">
+                <svg viewBox="0 0 24 24"><path d="M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z" /></svg>
+                Instagram
+            </a>
         </div>
     </main>
+
+</body>
+</html>
