--- a/templates/index/miembros.html
+++ b/templates/index/miembros.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/static/css/barralateral.css">
 </head>
 <body>
+    <div>
     <div id="toggle">
         <span>&#9776;</span> <!--El simbolo de Tres barras-->
     </div>
@@ -152,5 +153,6 @@
         </div>
     </main>
 <script src="/static/js/barralateral.js"></script>
+</div>
 </body>
 </html>
