arreglé barra lateral en miembro (faltaba pasarle el id y el rol a la barra lateral para que pueda hacer el condicional del panel d amin)

--- a/static/css/ban.css
+++ b/static/css/ban.css
@@ -12,6 +12,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background:url('/static/util/img/lobo_cartel_sin_fondo.png');
 }
 
 .texto-baneado{
