--- a/templates/index/indexhomeoinicio.html
+++ b/templates/index/indexhomeoinicio.html
@@ -32,6 +32,7 @@
         <a class="separador3" href="/panelnotificaciones"><img src="/static/utils/img/campana-img2.png" alt="Notificaciones" class="campana2"></a>
         <a class="separador3" href="/comunicatenosotros"><img src="/static/utils/img/pregunta-img3.png" alt="Soporte" class="soporte3"></a>
         <a class="separador3" href="/miembros"><img src="/static/utils/img/grupo-img4.png" alt="" class="grupo4"></a>
+        <a class="separador3" href="/mis_likes"><img src="/static/utils/img/corazon4.png" alt="Likes" class="soporte3"></a>
         <a class="separador3" href="/configuracion"><img src="/static/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
                 <a class="separador3" href="/logout"><img src="/static/utils/img/cerrar-sesion.png" alt="cerrar-sesion" class="cerrar-sesion6"></a>
     </div>
