--- a/static/css/d7mo.css
+++ b/static/css/d7mo.css
@@ -180,94 +180,81 @@ body {
 
 
 /* --- Pantallas grandes (desde 1025px) --- */
-@media screen and (min-width: 1025px) {
+@media (min-width: 1025px) {
     .cuerpo1 {
-        padding-left: 100px; /* espacio para la barra lateral */
-    }
-
-    .separador-lateral {
-        display: block;
-    }
-
-    .ordenado {
-        flex-direction: column;
+        padding-top: 80px; /* separa del header fijo */
     }
 }
 
-
-/* --- Tablets y pantallas medianas --- */
-@media screen and (max-width: 1024px) {
-    .buscador-logo2 {
-        width: 90%;
-    }
-
-    .cuerpo1 {
-        padding-left: 20px; /* reduce espacio al desaparecer barra */
-    }
-
+/* Tablets */
+@media (max-width: 1024px) {
     .elcostado {
-        width: 100%;
-        height: auto;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        padding: 10px 0;
-        position: relative;
+        width: 60%;
+        left: -60%;
     }
-
-    .separador-lateral {
-        display: none;
+    .primero1 {
+        margin-left: 5em;
     }
-
-    .ordenado {
-        flex-direction: row;
-        flex-wrap: wrap;
-        gap: 20px;
-        justify-content: center;
-        overflow-x: auto;
-        width: 100%;
-        padding: 10px;
+    .usuario, .ordenado img {
+        width: 40px;
+        height: 40px;
+        margin-top: 30px;
     }
-
-    .ordenado img {
-        width: 45px;
-        height: 45px;
-        margin-top: 0;
+    .logo {
+        width: 18px;
+        height: 18px;
+    }
+    .texto-superpuesto {
+        font-size: 28px;
+    }
+    .notificaciones-bloque{
+        margin-top: 5em;
     }
 }
 
-
-/* --- Celulares --- */
-@media screen and (max-width: 600px) {
+/* Móviles */
+@media (max-width: 600px) {
+    .header {
+        flex-direction: row;
+        gap: 10px;
+        padding: 8px;
+    }
+    .elcostado {
+        width: 80%;
+        left: -80%;
+    }
     .buscador-logo2 {
-        width: 95%;
+        max-width: none;
     }
-
     .buscador {
-        width: 100%;
+        height: 30px;
+        font-size: 14px;
     }
-
+    .logo {
+        width: 16px;
+        height: 16px;
+    }
+    .usuario, .ordenado img {
+        width: 30px;
+        height: 30px;
+        margin-top: 20px;
+    }
     .bloque-superpuesto {
-        width: 95%;
+        height: 10rem;
+        width: 21rem;
+        margin-left: 1em;
+        margin-top: 2em;
     }
-
+        .notificaciones-bloque{
+        margin-top: 5em;
+    }
+    .primero1 {
+        margin-left: 1em;
+    }
     .texto-superpuesto {
         font-size: 20px;
-        padding-top: 30%;
     }
-
-    .ordenado img {
-        width: 50px;
-        height: 50px;
-    }
-
-    .elcostado {
-        flex-wrap: nowrap;
-        overflow-x: auto;
-    }
-
-    #out {
-        font-size: 22px;
-        margin: 10px;
+    #toggle {
+        font-size: 26px;
     }
 }
