--- a/static/css/dinformatica.css
+++ b/static/css/dinformatica.css
@@ -176,33 +176,81 @@ h1{
 
 
 /* Responsividad */
-@media screen and (max-width: 768px) {
+@media (min-width: 1025px) {
     .cuerpo1 {
-        flex-direction: column;
-        align-items: center;
-        padding: 20px 10px;
+        padding-top: 80px; /* separa del header fijo */
     }
+}
 
-    .bloque-superpuesto {
-        width: 90%;
-        max-width: 350px;
-    }
-
-    .header {
-        margin-left: 0;
-        padding: 10px;
-    }
-
+/* Tablets */
+@media (max-width: 1024px) {
     .elcostado {
-        position: static;
-        width: 100%;
-        flex-direction: row;
-        justify-content: space-around;
-        padding: 10px 0;
+        width: 60%;
+        left: -60%;
     }
+    .primero1 {
+        margin-left: 5em;
+    }
+    .usuario, .ordenado img {
+        width: 40px;
+        height: 40px;
+        margin-top: 30px;
+    }
+    .logo {
+        width: 18px;
+        height: 18px;
+    }
+    .texto-superpuesto {
+        font-size: 28px;
+    }
+    .notificaciones-bloque{
+        margin-top: 5em;
+    }
+}
 
-    .elcostado a img {
-        margin: 0;
-        width: 25px;
+/* Móviles */
+@media (max-width: 600px) {
+    .header {
+        flex-direction: row;
+        gap: 10px;
+        padding: 8px;
+    }
+    .elcostado {
+        width: 80%;
+        left: -80%;
+    }
+    .buscador-logo2 {
+        max-width: none;
+    }
+    .buscador {
+        height: 30px;
+        font-size: 14px;
+    }
+    .logo {
+        width: 16px;
+        height: 16px;
+    }
+    .usuario, .ordenado img {
+        width: 30px;
+        height: 30px;
+        margin-top: 20px;
+    }
+    .bloque-superpuesto {
+        height: 10rem;
+        width: 21rem;
+        margin-left: 1em;
+        margin-top: 2em;
+    }
+        .notificaciones-bloque{
+        margin-top: 5em;
+    }
+    .primero1 {
+        margin-left: 1em;
+    }
+    .texto-superpuesto {
+        font-size: 20px;
+    }
+    #toggle {
+        font-size: 26px;
     }
 }
