--- a/static/css/barralateral.css
+++ b/static/css/barralateral.css
@@ -164,3 +164,32 @@ Y en su HTML, dentro del body, agregar lo siguiente:
 
 */
 
+/* Para navegadores WebKit (Chrome, Edge, Safari) */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 4px;
+  border: 2px solid transparent;
+  background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+/* Oculta el scroll pero permite el scroll con mouse o touch */
+.container {
+  overflow: auto;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE 10+ */
+}
+.container::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+}
