--- a/templates/index/likes.html
+++ b/templates/index/likes.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/static/css/indexcajacomentario.css" />
   <link rel="stylesheet" href="/static/css/barralateral.css"/>
   <link rel="stylesheet" href="/static/css/ApartadoFuentes.css"/>
+  <link rel="stylesheet" href="/static/css/likes.css"/>
   <meta name="csrf-token" content="{{ csrf_token() }}">
   <meta name="usuario-id" content="{{ current_user.id }}">
   <meta name="usuario-rol" content="{{ current_user.rol }}">
@@ -42,8 +43,6 @@
       <!-- <a href="/templates/index/ComentariosParaTodos.html">Comentarios</a>
       <a href="/fuentes/materias/1">Fuentes</a> -->
 </section>
-
-
       <div id="commentsSection"></div> 
   </main>
     
