--- a/static/css/likes.css
+++ b/static/css/likes.css
@@ -4,8 +4,9 @@
     border: 1px solid #345678;
     border-radius: 10px;
     padding: 10px;
-    margin: 1em;
-    margin-bottom: 1em;
+    width: 90%;
+    margin: 2em;
+
 }
 
 .contenido-titulo{
@@ -37,4 +38,28 @@
     font-size: 1.2rem;
     margin-top: 1em;
     margin-bottom: 1em;
+}
+
+@media (max-width: 600px) {
+    .comentarios-header{
+        width: 100%;
+    }
+    .comentarios-anteriores {
+        width: 100%;
+        padding: 1em;
+    }
+    .contenido-titulo, .contenido-texto, .contenido-info {
+        width: 100%;
+    }
+}
+@media (max-width: 400px) {
+    .comentarios-anteriores {
+        margin-left: 0;
+    }
+    .contenido-titulo {
+        width: 100%;
+    }
+    .contenido-texto, .contenido-info {
+        width: 100%;
+    }
 }
