--- a/templates/index/likes.html
+++ b/templates/index/likes.html
@@ -22,11 +22,11 @@
         <div id="out">
             <span>&#9587;</span> <!--El simbolo de la X-->
         </div>
-        <a class="separador3" href="/templates/index/indexusuario.html"><img src="/static/utils/img/usuario.png" alt="Perfil" class="usuario"></a>
+        <a class="separador3" href="/perfil"><img src="/static/utils/img/usuario.png" alt="Perfil" class="usuario"></a>
         <a class="separador3" href="/indexhomeoinicio"><img src="/static/utils/img/casa-img1.png" alt="Inicio" class="casa1"></a>
         <a class="separador3" href="/panelnotificaciones"><img src="/static/utils/img/campana-img2.png" alt="Notificaciones" class="campana2"></a>
-        <a class="separador3" href="/templates/index/indexcentralayuda.html"><img src="/static/utils/img/pregunta-img3.png" alt="Soporte" class="soporte3"></a>
-        <a class="separador3" href="#"><img src="/static/utils/img/grupo-img4.png" alt="" class="grupo4"></a>
+        <a class="separador3" href="/miembros"><img src="/static/utils/img/grupo-img4.png" alt="" class="grupo4"></a>
+        <a class="separador3" href="/mis_likes"><img src="/static/utils/img/corazon4.png" alt="Likes" class="soporte3"></a>
         <a class="separador3" href="/configuracion"><img src="/static/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
         <a class="separador3" href="/logout"><img src="/static/utils/img/cerrar-sesion.png" alt="cerrar-sesion" class="cerrar-sesion6"></a>
         
