ahora verificar otp es lindo ahora

--- a/templates/index/confirmacionceo.html
+++ b/templates/index/confirmacionceo.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confirmacion de Correo Electronico</title>
     <link rel="stylesheet" href="/static/css/confirmacionceo.css">
+    <meta name="csrf-token" content="{{ csrf_token() }}">
 </head>
 <body>
     <h3>Verificación</h3>
@@ -13,14 +14,14 @@
   <!-- Campoooos para ingresar los números del código -->
   <form>
     <div class="codigo-fondo">
-     <input type="text" name="codigo"
+     <input type="text" name="codigo" id="cod"
        pattern="\d{6}" maxlength="6" inputmode="numeric" required>
     </div>
     <br><br>
 
     <!-- Botón para verificar -->
-    <input type="button" value="Enviar">
+    <button type="submit">enviar</button>
   </form>
-
+<script src="/static/js/verificarOTP.js"></script>
 </body>
 </html>
