--- a/templates/index/miembros.html
+++ b/templates/index/miembros.html
@@ -138,7 +138,7 @@
         </div>
         
         <div class="team-member">
-            <img src="{{ url_for('static', filename='img/sonino.png') }}" alt="Foto de Ciro Saucedo">
+            <img src="/static/utils/img/cirfoto.jpg" alt="Foto de Ciro Saucedo">
             <h3 class="member-name">Ciro Saucedo</h3>
             <p class="member-role">Documentacion</p>
             <a href="https://www.instagram.com/cirocoroneell_" class="social-link" target="_blank">
