hice que te avise en verificar otp si pusiste el coso mal

--- a/templates/index/1ProvisorioLoginOTP.html
+++ b/templates/index/1ProvisorioLoginOTP.html
@@ -27,6 +27,7 @@
       <h1>¡Hola de vuelta!</h1>
       <form id="otp" autocomplete="off">
         <div class="input-group">
+          <div id="textito"></div>
           <label for="name">Codigo De Verificacion:</label>
           <input type="text" id="cod" name="name" required />
         </div>
