agregue barra actualziada

--- a/templates/index/panelnotificaciones.html
+++ b/templates/index/panelnotificaciones.html
@@ -17,6 +17,9 @@
     <div class="elcostado ordenado">
         <div id="out">
             <span>&#9587;</span> <!--El simbolo de la X-->
+        <div class="elcostado ordenado">
+        <div id="out">
+            <span>&#9587;</span> <!--El simbolo de la X-->
         </div>
         <a class="separador3" href="/perfil"><img src="/static/utils/img/usuario.png" alt="Perfil" class="usuario"></a>
         <a class="separador3" href="/indexhomeoinicio"><img src="/static/utils/img/casa-img1.png" alt="Inicio" class="casa1"></a>
@@ -25,7 +28,6 @@
         <a class="separador3" href="/mis_likes"><img src="/static/utils/img/corazon4.png" alt="Likes" class="soporte3"></a>
         <a class="separador3" href="/configuracion"><img src="/static/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
         <a class="separador3" href="/logout"><img src="/static/utils/img/cerrar-sesion.png" alt="cerrar-sesion" class="cerrar-sesion6"></a>
-        <a href="/logout">cerrar sesion</a> <!--provisorio-->
     </div>
     <!--Fin de la barra lateral-->
 
