--- a/templates/index/tuercabarralateral.html
+++ b/templates/index/tuercabarralateral.html
@@ -20,7 +20,7 @@
 
     <div class="elcostado ordenado">
         <div id="out">
-            <span>&#9587;</span>
+            <span>&#9587;</span> <!--El simbolo de la X-->
         </div>
         <a class="separador3" href="/perfil"><img src="/static/utils/img/usuario.png" alt="Perfil" class="usuario"></a>
         <a class="separador3" href="/indexhomeoinicio"><img src="/static/utils/img/casa-img1.png" alt="Inicio" class="casa1"></a>
@@ -29,7 +29,7 @@
         <a class="separador3" href="/mis_likes"><img src="/static/utils/img/corazon4.png" alt="Likes" class="soporte3"></a>
         <a class="separador3" href="/configuracion"><img src="/static/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
         <a class="separador3" href="/logout"><img src="/static/utils/img/cerrar-sesion.png" alt="cerrar-sesion" class="cerrar-sesion6"></a>
-    <div class="cuerpo1">
+    </div>
         <main class="contenido-principal">
             <div class="contenedor-configuracion">
                 <h1>Configuración de la Cuenta</h1>
