Modificamos los botones de confirmacion, pusimos un cartel a la pagina de ban

--- a/templates/index/baneado.html
+++ b/templates/index/baneado.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div id="container">
-        <p class="texto-baneado">Estas baneado<span class="simbolo-baneado">🚫</span> </p> 
-        <a class="entrar-invitado" href='/entrar_como_invitado'>Entrar como invitado</a>
+        <p class="texto-baneado"><strong>Estas baneado por <br> infligir las normas</strong></p> 
     </div>
+    <a class="entrar-invitado" href='/entrar_como_invitado'>Entrar como invitado</a>
 </body>
 </html>
