--- a/static/css/confirmacionceo.css
+++ b/static/css/confirmacionceo.css
@@ -1,6 +1,8 @@
 /* Fondo general */
 body {
-  background-color: #082c54;
+  background: linear-gradient(to top, #020c25 0%, #082c54 50%);
+  width: 100%;
+  min-height: 100vh;
   color: #ffffff;
   text-align: center;
   padding-top: 100px;
@@ -78,6 +80,21 @@ input[type="button"]:active{
   background-color: #1e0963; /* Cambia el color de fondo al hacer clic */
   color: #ffffff;            /* (opcional) cambia también el color del texto */
 }
+.boton-enviar{
+    color: rgb(255, 255, 255);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-decoration: none;
+    font-size: 40px;
+    width: 20rem;
+    height: 4rem;
+    background-color: #092a4f;
+    padding: 10px;
+    border-radius: 20px;
+    cursor:pointer;
+}
+.boton-enviar:hover{
+  background-color: #0e3a6b;
+}
 
 @media (max-width: 600px){
  .codigo-fondo{
@@ -118,4 +135,24 @@ input[type="button"]:active{
       position: relative; /*para que no este tan abajo*/
       top: -50px;
     }
+}
+@media (max-width: 375px){
+ .codigo-fondo{
+  width: 90%;
+  height: 200px;
+ }
+  input[type="text"] {
+    width: 70%; /* ancho de la caja de texto */
+    height: 70px;  /* alto de la caja de texto */
+    font-size: 25px;   /* tamaño de la letra que escribís adentro */
+    letter-spacing: 20px; 
+    margin-top: 50px;
+  }
+  input[type="button"] {
+    width: 150px;    /* ancho */
+    height: 40px;    /* alto */
+    font-size: 15px; /* tamaño del texxxt*/
+    position: relative; /*para que no este tan abajo*/
+    top: -50px;
+  }
 }
