--- a/templates/index/confirmacionceo.html
+++ b/templates/index/confirmacionceo.html
@@ -20,7 +20,7 @@
     <br><br>
 
     <!-- Botón para verificar -->
-    <button type="submit">enviar</button>
+    <button class="boton-enviar" type="submit">enviar</button>
   </form>
 <script src="/static/js/verificarOTP.js"></script>
 </body>
