--- a/templates/index/1ProvisorioOTP.html
+++ b/templates/index/1ProvisorioOTP.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confirmacion de Correo Electronico</title>
     <link rel="stylesheet" href="/static/css/confirmacionceo.css">
+    <link rel="icon" href="/static/utils/img/logo2.png">
     <meta name="csrf-token" content="{{ csrf_token() }}">
 </head>
 <body>
