--- a/templates/index/ComentariosParaTodos.html
+++ b/templates/index/ComentariosParaTodos.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/static/css/indexcajacomentario.css" />
   <link rel="stylesheet" href="/static/css/barralateral.css"/>
   <link rel="stylesheet" href="/static/css/ApartadoFuentes.css"/>
+  <link rel="icon" href="/static/utils/img/logo2.png">
   <meta name="csrf-token" content="{{ csrf_token() }}">
   <meta name="is-authenticated" content="{{ is_authenticated | tojson }}">
   <meta name="usuario-id" content="{{ current_user.id }}">
