--- a/templates/index/baneado.html
+++ b/templates/index/baneado.html
@@ -6,6 +6,7 @@
     <meta name="usuario-id" content="{{ current_user.id or 'null' }}">
     <meta name="usuario-rol" content="{{ current_user.rol or 'anonimo' }}">
     <link rel="stylesheet" href="/static/css/ban.css">
+    <link rel="icon" href="/static/utils/img/logo2.png">
     <title></title>
 </head>
 <body>
