--- a/templates/index/centroayuda.html
+++ b/templates/index/centroayuda.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Centro de Ayuda - CET4</title>
   <link rel="stylesheet" href="../../static/css/Centralayuda.css" />
+  <link rel="icon" href="/static/utils/img/logo2.png">
 </head>
 <body>
   <header class="header">
