--- a/templates/index/miembros.html
+++ b/templates/index/miembros.html
@@ -8,6 +8,7 @@
     <meta name="usuario-rol" content="{{ current_user.rol or 'anonimo' }}">
     <link rel="stylesheet" href="/static/css/miembros.css">
     <link rel="stylesheet" href="/static/css/barralateral.css">
+    <link rel="icon" href="/static/utils/img/logo2.png">
 </head>
 <body>
     <div>
