--- a/templates/index/tuercabarralateral.html
+++ b/templates/index/tuercabarralateral.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/estilohomeoinicio.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/barralateral.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/configuracion.css') }}">
+    <link rel="icon" href="/static/utils/img/logo2.png">
     
     <meta name="usuario-rol" content="{{ current_user.rol or 'anonimo' }}">
     <meta name="csrf-token" content="{{ csrf_token() }}">
