--- a/templates/index/ApartadoFuentes.html
+++ b/templates/index/ApartadoFuentes.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/static/css/indexcajacomentario.css" />
    <link rel="stylesheet" href="/static/css/barralateral.css"/>
    <link rel="stylesheet" href="/static/css/ApartadoFuentes.css"/>
+   <link rel="icon" href="/static/utils/img/logo2.png">
 </head>
 <body>
   <div id="toggle">
