--- a/templates/index/indexcrearcuenta.html
+++ b/templates/index/indexcrearcuenta.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Crear Cuenta - CET</title>
   <link rel="stylesheet" href="/static/css/estilocrearcuenta.css"/>
+  <link rel="icon" href="/static/utils/img/logo2.png">
   <meta name="csrf-token" content="{{ csrf_token() }}">
   <meta name="usuario-rol" content="{{ current_user.rol }}">
 </head>
