--- a/templates/index/indexhomeoinicio.html
+++ b/templates/index/indexhomeoinicio.html
@@ -8,6 +8,7 @@
     <meta name="usuario-id" content="{{ current_user.id or 'null' }}">
     <meta name="csrf-token" content="{{ csrf_token() }}">
     <meta name="usuario-rol" content="{{ current_user.rol or 'anonimo' }}">
+    <link rel="icon" href="/static/utils/img/logo2.png">
     <title>Home</title>
 </head>
 <body>
