--- a/templates/index/indexin7mo.html
+++ b/templates/index/indexin7mo.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/d7mo.css">
     <link rel="stylesheet" href="/static/css/barralateral.css"/>
+    <link rel="icon" href="/static/utils/img/logo2.png">
     <meta name="usuario-id" content="{{ current_user.id or 'null' }}">
     <meta name="usuario-rol" content="{{ current_user.rol or 'anonimo' }}">
     <title>7to-informatica</title>
