--- a/templates/index/invope6inf.html
+++ b/templates/index/invope6inf.html
@@ -6,6 +6,7 @@
   <title>Comentarios con Menú</title>
   <link rel="stylesheet" href="/static/css/indexcajacomentario.css" />
    <link rel="stylesheet" href="/static/css/barralateral.css"/>
+   <link rel="icon" href="/static/utils/img/logo2.png">
 </head>
 <body>
   <div id="toggle">
