--- a/templates/index/likes.html
+++ b/templates/index/likes.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="/static/css/barralateral.css"/>
   <link rel="stylesheet" href="/static/css/ApartadoFuentes.css"/>
   <link rel="stylesheet" href="/static/css/likes.css"/>
+  <link rel="icon" href="/static/utils/img/logo2.png">
   <meta name="csrf-token" content="{{ csrf_token() }}">
   <meta name="usuario-id" content="{{ current_user.id }}">
   <meta name="usuario-rol" content="{{ current_user.rol }}">
