--- a/templates/index/paneladmin.html
+++ b/templates/index/paneladmin.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="/static/css/barralateral.css"/>
   <link rel="stylesheet" href="/static/css/ApartadoFuentes.css"/>
   <link rel="stylesheet" href="/static/css/paneldeadmin.css"/>
+  <link rel="icon" href="/static/utils/img/logo2.png">
   <meta name="csrf-token" content="{{ csrf_token() }}">
   <!-- Seguridad CSP: pasar ID por meta -->
   <meta name="usuario-id" content="{{ current_user.id or 'null' }}"> <!--NO BORRAR ESTA LINEA-->
