--- a/templates/index/panelnotificaciones.html
+++ b/templates/index/panelnotificaciones.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="/static/css/barralateral.css"/>
   <link rel="stylesheet" href="/static/css/ApartadoFuentes.css"/>
   <link rel="stylesheet" href="/static/css/notificaciones.css"/>
+  <link rel="icon" href="/static/utils/img/logo2.png">
   <meta name="csrf-token" content="{{ csrf_token() }}">
 </head>
 <body>
