perdon, lo mismo que el anterior commit

--- a/static/css/notificaciones.css
+++ b/static/css/notificaciones.css
@@ -15,10 +15,10 @@
 }
 
 .usuario-nombre{
-    color: white;
+    color: #ccc;
 }
 .fecha{
-    color: white;
+    color: #ccc;
 }
 .btn-eliminar{
     margin-top: -0.5em;
