mejore el zettino que decia pon tu corre y agregue el logo a indexprincipal que no lo tenia.

--- a/templates/index/1ProvisorioEnviarCorreo.html
+++ b/templates/index/1ProvisorioEnviarCorreo.html
@@ -19,7 +19,7 @@
   <main class="contenedor">
     <section class="presentacion">
       <figure class="cota">
-        <figcaption class="globo">¡Hola pon tu correo!</figcaption>
+        <figcaption class="globo">¡Hola ingresa tu correo!</figcaption>
         <img class="masimg" src="/static/utils/img/zettinocrea.png" alt="Mascota Zettino" />
       </figure>
     </section>
