--- a/templates/index/indexprincipal.html
+++ b/templates/index/indexprincipal.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> C.E.T</title>
   <link rel="stylesheet" href="/static/css/style_principal.css">
+  <link rel="icon" href="/static/utils/img/logo2.png">
 </head>
 <body>
    
@@ -13,7 +14,7 @@
     <!-- aca esta el coso de la pagina el coso de arriba ahhh no me acuerdo como se dice perdón :( -->
     <div class="logo"> <img src="/static/utils/img/logo2.png" alt="imagen de el logo"> </div>
 
-    <div class="contacto"> <a href="/comunicatenosotros" class="contacto">COMUNICATE CON NOSOTROS</a></div> 
+    <div class="contacto"> <a href="https://mail.google.com/mail/?view=cm&fs=1&to=foro.cet4@gmail.com" class="contacto" target="_blank">COMUNICATE CON NOSOTROS</a></div> 
    
   </header>
 
